fixed overlay colors for highcontrast

--- a/styles/colors-highcontrast.scss
+++ b/styles/colors-highcontrast.scss
@@ -11,7 +11,9 @@
 	// UI Conceptual Colors
 	// ---------------------------------------
 
-	//--sand-overlay-bg-color-rgb: rgb(0, 0, 0);
+	--sand-overlay-bg-color-rgb: rgb(0, 0, 0);
+	--sand-overlay-outline-color: #7c848b;
+	--sand-overlay-outline-style: solid;
 
 	// ---------------------------------------
 	// Component Colors
@@ -20,10 +22,6 @@
 	// Alert
 	// ---------------------------------------
 	--sand-fullscreen-bg-color: #000000; // different from neutral
-
-	// Input
-	// ---------------------------------------
-	--sand-overlay-bg-color-rgb: rgb(87, 94, 102); // different from neutral
 
 	// KeyGuide
 	// ---------------------------------------
