--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -208,7 +208,7 @@ $sand-checkbox-standalone-bg-disabled-focus-bg-color: $sand-disabled-focus-bg-co
 
 // ContextualPopup
 // ---------------------------------------
-$sand-contextualpopup-bg-color: $sand-overlay-bg-color-rgb;
+$sand-contextualpopup-bg-color: $sand-overlay-bg-color;
 $sand-contextualpopup-shadow: 0 24px 60px $sand-shadow-color;
 
 // Dropdown
